Implement bn system store export command
Add full implementation of store export functionality that creates gzip-compressed
tar archives containing the binnacle data store. The export includes:

- tasks.jsonl, bugs.jsonl, commits.jsonl, test-results.jsonl (JSONL files)
- manifest.json with export metadata and SHA256 checksums for integrity verification
- config.json with export context (repo path, timestamp)

Key features:
- Supports file output or stdout ('-') for piping to remote machines
- Validates format parameter (currently only 'archive' supported, extensible for future formats)
- Includes SHA256 checksums for all exported files in manifest
- Handles missing files gracefully for backwards compatibility
- Both JSON and human-readable output formats
- Suppresses output when writing to stdout to avoid corrupting binary data

Added Error::InvalidInput variant for format validation.
Added tar and flate2 dependencies for archive creation.

Implements task bn-c84b from PRD_SYSTEM_COMMANDS.md.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ dirs = "5"
 # Error handling
 thiserror = "1"
 
+# Archive/compression
+tar = "0.4"
+flate2 = "1.0"
+
 # GUI dependencies (feature-gated)
 axum = { version = "0.7", features = ["ws"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
