--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "binnacle"
-version = "0.1.0"
-edition = "2021"
-description = "A CLI tool for AI agents and humans to track project state"
+version = "0.0.1-alpha.1"
+edition = "2024"
+description = "A CLI tool for AI agents and humans to track project graphs"
 license = "MIT"
-repository = "https://github.com/your-org/binnacle"
+repository = "https://github.com/hbeberman/binnacle"
+keywords = ["agent", "ai", "graph"]
+categories = ["development-tools", "command-line-utilities"]
 
 [[bin]]
 name = "bn"
