ci: add crates.io publish workflow and harden CI
- Add cd.yml: unified release workflow for GitHub releases + crates.io
  - Triggers on release publish event (use GitHub release UI)
  - Dry-run mode on PRs and workflow_dispatch
  - Version verification (tag must match Cargo.toml)
  - Build attestation for supply chain security
  - SHA256 checksums for artifacts
  - Uses taiki-e/upload-rust-binary-action

- Harden ci.yml:
  - Pin all actions to commit SHAs
  - Add permissions: {} at workflow level
  - Add concurrency control
  - Add timeouts
  - Use Swatinem/rust-cache
  - Add persist-credentials: false

- Add readme field to Cargo.toml for crates.io

- Remove old release.yml (replaced by cd.yml)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 description = "A CLI tool for AI agents and humans to track project graphs"
 license = "MIT"
 repository = "https://github.com/hbeberman/binnacle"
+readme = "README.md"
 keywords = ["agent", "ai", "graph"]
 categories = ["development-tools", "command-line-utilities"]
 
