refactor: rename Dockerfile to Containerfile for OCI compliance
- Renamed container/Dockerfile to container/Containerfile
- Updated docker-compose.yml dockerfile reference
- Updated README.md file listing and build command

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   binnacle-worker:
     build:
       context: ..
-      dockerfile: container/Dockerfile
+      dockerfile: container/Containerfile
     container_name: binnacle-worker
     
     environment:
