--- a/container/Containerfile
+++ b/container/Containerfile
@@ -6,7 +6,7 @@ LABEL org.opencontainers.image.title="binnacle-worker"
 LABEL org.opencontainers.image.description="AI agent worker with binnacle task tracking"
 LABEL org.opencontainers.image.source="https://github.com/henry/binnacle"
 
-# Install system dependencies (including build tools for Rust compilation)
+# Install system dependencies (no Rust needed - we copy pre-built binary)
 RUN dnf install -y \
     git \
     curl \
@@ -20,22 +20,10 @@ RUN dnf install -y \
     npm \
     python3 \
     python3-pip \
-    gcc \
-    make \
-    openssl-devel \
-    pkg-config \
     && dnf clean all
 
-# Install Rust (for building binnacle)
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-ENV PATH="/root/.cargo/bin:${PATH}"
-
-# Install binnacle from source
-COPY . /build/binnacle
-WORKDIR /build/binnacle
-RUN cargo build --release && \
-    cp target/release/bn /usr/local/bin/bn && \
-    rm -rf /build
+# Copy pre-built binnacle binary (build with: just build release)
+COPY target/release/bn /usr/local/bin/bn
 
 # Install GitHub Copilot CLI
 # Note: Requires COPILOT_GITHUB_TOKEN at runtime for auth
