feat(container): use current_exe to self-pack binary into container
Instead of expecting the bn binary at target/release/bn, the
container_build command now uses std::env::current_exe() to get the
currently running binary and copies it to the build context. This
allows 'bn container build' to work regardless of how bn was installed.

Changes:
- container_build() now copies the running binary to container/bn
- Containerfile updated to use container/bn with ARG for flexibility
- justfile container recipe copies target/release/bn to container/bn
- container/README.md updated with new build instructions

Closes: bn-06ae

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -21,8 +21,10 @@ RUN dnf install -y \
     python3-pip \
     && dnf clean all
 
-# Copy pre-built binnacle binary (build with: just build release)
-COPY target/release/bn /usr/local/bin/bn
+# Copy binnacle binary (bn container build copies the running binary here)
+# For manual builds: cargo build --release && cp target/release/bn container/bn
+ARG BN_BINARY_PATH=container/bn
+COPY ${BN_BINARY_PATH} /usr/local/bin/bn
 
 # Install bun (JavaScript runtime and package manager)
 RUN curl -fsSL https://bun.sh/install | bash
