fix(container): correct GitHub source URL to hbeberman/binnacle
Fixes bn-aa0b: The LABEL org.opencontainers.image.source had incorrect
URL 'henry/binnacle' instead of 'hbeberman/binnacle'.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -4,7 +4,7 @@ FROM docker.io/library/fedora:43
 
 LABEL org.opencontainers.image.title="binnacle-worker"
 LABEL org.opencontainers.image.description="AI agent worker with binnacle task tracking"
-LABEL org.opencontainers.image.source="https://github.com/henry/binnacle"
+LABEL org.opencontainers.image.source="https://github.com/hbeberman/binnacle"
 
 # Install system dependencies (no Rust needed - we copy pre-built binary)
 RUN dnf install -y \
