feat: implement Doc entity model with zstd+b64 compression
- Add DocType enum (prd, note, handoff) for document categorization
- Update Doc struct with all PRD fields:
  - doc_type: Type of documentation
  - summary_dirty: Flag for when content changes but summary doesn't
  - editors: List of who edited this version (agent or user)
  - supersedes: Link to previous version for versioning
- Implement zstd compression + base64 encoding for content storage
- Add compress_content() and decompress_content() helper functions
- Add Doc methods: get_content(), set_content(), is_summary_dirty(), add_editor()
- Add helper functions for summary section hashing
- Add 5KB compressed content size limit
- Add 18 unit tests for Doc model functionality
- Update doc_create command to use new Doc API
- Add zstd and base64 dependencies to Cargo.toml

Closes bn-8ce4

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ thiserror = "1"
 # Archive/compression
 tar = "0.4"
 flate2 = "1.0"
+zstd = "0.13"
+base64 = "0.22"
 
 # GUI dependencies (feature-gated)
 axum = { version = "0.7", features = ["ws"], optional = true }
