feat: secure container user identity with nss_wrapper
Replaces insecure passwd/shadow hacks with proper user identity handling.

- Run container as host user's UID/GID via --user flag
- Use nss_wrapper for user identity (Node.js os.userInfo(), git)
- No world-writable system files needed

- Files created in container owned by host user
- Preserves ownership in mounted workspace

- Add --net-host for full network access
- Required for AI agent API calls (OpenAI, Anthropic)

- Add BN_REPO_PATH_OVERRIDE env var
- Maps container /workspace path to host path for storage hash

- Inherit stdio for interactive TTY mode
- Use --null-io for non-TTY contexts

- Add --shell flag for interactive debugging

- Sudo support deferred due to containerd 2.0 limitation
  (user namespaces incompatible with --net-host)
- Tracked in idea bn-cab5

refactor: simplify container user identity patch

Review fixes:
- Remove dead code: get_subid_range(), subid_not_configured_error(), and 5 tests
  (YAGNI - --allow-sudo is deferred with no timeline)
- Replace BN_REPO_PATH_OVERRIDE with BN_STORAGE_HASH
  (Host computes hash, passes directly - simpler, no security check needed)
- Remove --null-io flag, always inherit stdio
  (Container errors now visible in both TTY and non-TTY modes)

Net: -135 lines

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -19,24 +19,30 @@ RUN dnf install -y \
     unzip \
     python3 \
     python3-pip \
+    nodejs \
+    npm \
+    nss_wrapper \
     && dnf clean all
+
+# Create nss_wrapper template files for default (non-sudo) mode
+# Used by entrypoint.sh to provide user identity for Node.js os.userInfo(), git, etc.
+# when running as host user (not root)
+RUN mkdir -p /etc/nss_wrapper && \
+    cp /etc/passwd /etc/nss_wrapper/passwd && \
+    cp /etc/group /etc/nss_wrapper/group && \
+    chmod 644 /etc/nss_wrapper/passwd /etc/nss_wrapper/group
 
 # Copy binnacle binary (bn container build copies the running binary here)
 # For manual builds: cargo build --release && cp target/release/bn container/bn
 ARG BN_BINARY_PATH=container/bn
 COPY ${BN_BINARY_PATH} /usr/local/bin/bn
 
-# Install bun (JavaScript runtime and package manager)
-RUN curl -fsSL https://bun.sh/install | bash
-ENV BUN_INSTALL="/root/.bun"
-ENV PATH="$BUN_INSTALL/bin:$PATH"
-
-# Install GitHub Copilot CLI
+# Install GitHub Copilot CLI globally using npm
 # Note: Requires COPILOT_GITHUB_TOKEN at runtime for auth
-RUN bun install -g @github/copilot || true
+RUN npm install -g @github/copilot || true
 
 # Create working directories
-RUN mkdir -p /workspace /binnacle /copilot-config
+RUN mkdir -p /workspace /binnacle
 
 # Set container mode environment variables
 ENV BN_CONTAINER_MODE=true
