--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ categories = ["development-tools", "command-line-utilities"]
 name = "bn"
 path = "src/main.rs"
 
+[lib]
+name = "binnacle"
+path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 # CLI parsing
 clap = { version = "4", features = ["derive", "env"] }
@@ -52,6 +57,14 @@ tracing = { version = "0.1", optional = true }
 
 [features]
 gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
+wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "0.2", optional = true }
+js-sys = { version = "0.3", optional = true }
+web-sys = { version = "0.3", optional = true, features = ["console"] }
+console_error_panic_hook = { version = "0.1", optional = true }
+getrandom = { version = "0.2", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
