--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ tracing = { version = "0.1", optional = true }
 
 [features]
 gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
-wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js"]
+wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js", "ruzstd"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", optional = true }
@@ -65,6 +65,7 @@ js-sys = { version = "0.3", optional = true }
 web-sys = { version = "0.3", optional = true, features = ["console"] }
 console_error_panic_hook = { version = "0.1", optional = true }
 getrandom = { version = "0.2", optional = true }
+ruzstd = { version = "0.7", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2"
