--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -108,9 +108,51 @@ jobs:
           name: binnacle-x86_64-unknown-linux-gnu
           path: "${{ steps.upload-release.outputs.archive }}.*"
 
+  build-viewer:
+    name: Build Viewer
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@56f84321dbccf38fb67ce29ab63e4754056677e0 # stable
+        with:
+          toolchain: stable
+          targets: wasm32-unknown-unknown
+
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
+      - name: Enable cargo cache
+        uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
+
+      - name: Build viewer.html
+        run: ./scripts/embed_wasm.sh --release
+
+      - name: Upload viewer to release
+        if: github.event_name == 'release'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload "${{ github.event.release.tag_name }}" target/viewer/viewer.html --clobber
+
+      - name: Upload viewer artifact (dry-run)
+        if: github.event_name != 'release'
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: viewer
+          path: target/viewer/viewer.html
+
   publish:
     name: Publish to crates.io
-    needs: [build]
+    needs: [build, build-viewer]
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
     timeout-minutes: 30
