--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ clap = { version = "4", features = ["derive", "env"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-# Database
-rusqlite = { version = "0.31", features = ["bundled"] }
+# Database (not available on wasm32)
+# rusqlite = { version = "0.31", features = ["bundled"] }  # See target-specific dependencies
 
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
@@ -58,6 +58,10 @@ tracing = { version = "0.1", optional = true }
 [features]
 gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
 wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js", "ruzstd"]
+
+# Native-only dependencies (not compiled for wasm32)
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+rusqlite = { version = "0.31", features = ["bundled"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", optional = true }
