feat(mcp): simplify MCP server to subprocess wrapper approach
Replace complex 38-tool MCP implementation (~3,500 lines) with simple
subprocess wrapper (~200 lines, 4 tools):
- binnacle-set_agent: Initialize session with cwd and optional agent ID
- binnacle-orient: Register agent (blocked in agent.sh for shell usage)
- binnacle-goodbye: Terminate agent (blocked in agent.sh for shell usage)
- bn_run: Execute any bn CLI command with timeout

Key changes:
- src/mcp/mod.rs: Stripped to subprocess wrapper implementation
- agent.sh: Block MCP lifecycle tools, add guidance blurb
- tests/cli_mcp_test.rs: Updated for new tool set
- tests/cli_system_test.rs: Added new system tests
- prds/PRD_MCP_SIMPLIFICATION.md: Full design documentation
- .vscode/mcp.json: VS Code MCP config for development

This approach eliminates maintenance burden (no new tool handlers needed)
and improves reliability by using the battle-tested CLI with timeouts.

Refs: PRD_MCP_SIMPLIFICATION.md

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,14 @@ sha2 = "0.10"
 # XDG directories
 dirs = "5"
 
+# UUID generation
+uuid = { version = "1", features = ["v4"] }
+
 # Error handling
 thiserror = "1"
+
+# Subprocess timeout
+wait-timeout = "0.2"
 
 # Archive/compression
 tar = "0.4"
