--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,9 @@ console_error_panic_hook = { version = "0.1", optional = true }
 getrandom = { version = "0.2", optional = true }
 ruzstd = { version = "0.7", optional = true }
 
+[build-dependencies]
+chrono = "0.4"
+
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "3"
