fix: block --no-verify in container environments
Agents were bypassing pre-commit hooks using git commit --no-verify.
This defeats the purpose of quality checks (formatting, linting, audit).

Solution:
- Add git-wrapper.sh that intercepts git commit/push --no-verify
- Wrapper blocks --no-verify only when BN_CONTAINER_MODE=true
- Provides helpful error message with fix commands
- Installs to /usr/local/bin/git in container (takes precedence)

Also removes --no-verify suggestions from hooks error messages
since agents should fix issues, not bypass checks.

Fixes: bn-cb55

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -48,6 +48,12 @@ RUN mkdir -p /etc/nss_wrapper && \
 ARG BN_BINARY_PATH=container/bn
 COPY ${BN_BINARY_PATH} /usr/local/bin/bn
 
+# Install git wrapper that blocks --no-verify
+# The wrapper intercepts git commit/push --no-verify and rejects it
+# This ensures agents cannot bypass commit hooks
+COPY container/git-wrapper.sh /usr/local/bin/git
+RUN chmod +x /usr/local/bin/git
+
 # Install GitHub Copilot CLI globally using npm
 # Note: Requires COPILOT_GITHUB_TOKEN at runtime for auth
 RUN npm install -g @github/copilot || true
