fix: add gcc/make to container for Rust linker
Container build was failing with 'linker cc not found' error when
compiling Rust crates via cargo. Added gcc and make packages to the
dnf install command before rustup installation.

Bug: bn-4f94

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -7,6 +7,7 @@ LABEL org.opencontainers.image.description="AI agent worker with binnacle task t
 LABEL org.opencontainers.image.source="https://github.com/hbeberman/binnacle"
 
 # Install system dependencies
+# gcc/make: Required for Rust's C linker (compiling native crates)
 # Rust toolchain is needed for pre-commit hooks (cargo fmt, clippy, audit)
 RUN dnf install -y \
     git \
@@ -23,6 +24,8 @@ RUN dnf install -y \
     nodejs \
     npm \
     nss_wrapper \
+    gcc \
+    make \
     && dnf clean all
 
 # Install Rust toolchain via rustup
