feat: persist agent scaling config to config.kdl
- Add kdl crate dependency for KDL config format
- Add KDL config read/write functions to Storage
- Update config_set_agent_scaling to persist to config.kdl
- Update config_get_agent_scaling* to read from config.kdl (with SQLite fallback)
- Add 3 unit tests for KDL persistence

Task: bn-6b7e

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,9 @@ thiserror = "1"
 # Subprocess timeout
 wait-timeout = "0.2"
 
+# Configuration file format
+kdl = "6"
+
 # Archive/compression
 tar = "0.4"
 flate2 = "1.0"
