feat: add bn serve for continuous agent reconciliation
- Runs continuously, calling reconciliation on configurable interval (default 10s)
- Prints status when reconciliation takes action OR every 30s when idle
- Supports --dry-run mode
- Graceful shutdown on Ctrl+C
- JSON output for programmatic use, human-readable with -H

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,9 @@ flate2 = "1.0"
 zstd = "0.13"
 base64 = "0.22"
 
+# Signal handling for graceful shutdown
+ctrlc = "3"
+
 # GUI dependencies (feature-gated)
 axum = { version = "0.7", features = ["ws"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
