feat: add drop_privileges() function for SUDO_USER support
Implement drop_privileges(uid, gid) using setgid/setuid syscalls.
- Drops GID first (required - can't change GID after dropping UID)
- Logs the privilege drop to stderr
- Returns error if syscalls fail
- Unix-only implementation (returns error on Windows)
- Includes comprehensive unit tests

Part of SUDO_USER awareness milestone (bn-1866).
Implements task bn-bd82.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,10 @@ wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getran
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rusqlite = { version = "0.31", features = ["bundled"] }
 
+# Unix-specific dependencies
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.30", features = ["user"] }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", optional = true }
 js-sys = { version = "0.3", optional = true }
