feat: add --archive flag to bn gui for viewing archive files
- Add --archive flag to bn gui command to load from .bng archive files
- Imports archive to temporary directory and serves in readonly mode
- Uses BN_DATA_DIR env var to isolate archive data from main storage
- Temp directories automatically cleaned up when server stops
- Forces readonly mode when serving from archive

Usage: bn gui --archive /path/to/file.bng

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,9 @@ thiserror = "1"
 # Subprocess timeout
 wait-timeout = "0.2"
 
+# Temporary directory creation
+tempfile = "3"
+
 # Configuration file format
 kdl = "6"
 
