--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binnacle"
-version = "0.0.1-alpha.4"
+version = "0.0.1-alpha.5"
 edition = "2024"
 description = "A CLI tool for AI agents and humans to track project graphs"
 license = "MIT"
@@ -72,7 +72,14 @@ tracing = { version = "0.1", optional = true }
 
 [features]
 gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
-wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "getrandom/js", "ruzstd"]
+wasm = [
+  "wasm-bindgen",
+  "js-sys",
+  "web-sys",
+  "console_error_panic_hook",
+  "getrandom/js",
+  "ruzstd",
+]
 
 # Native-only dependencies (not compiled for wasm32)
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
