--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "description": "Development dependencies for binnacle project",
   "devDependencies": {
+    "esbuild": "^0.24.2",
     "eslint": "^8.57.0"
   },
   "scripts": {
-    "lint:js": "eslint web/js/**/*.js"
+    "lint:js": "eslint web/js/**/*.js",
+    "bundle": "node scripts/bundle-web.js"
   }
 }
