feat: compile-time asset embedding with --dev flag
- Update build.rs to bundle web assets when gui feature enabled
- Add EmbeddedAssetService implementing Tower Service trait
- Update server.rs to use embedded assets by default
- Add --dev flag to 'bn gui serve' for filesystem serving during development
- Add tower dependency for Service trait
- Web bundle (60KB compressed) embedded via include_bytes! macro

The embedded assets eliminate runtime dependency on web/ directory,
making deployment easier. Development workflow unchanged with --dev flag.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,13 +65,14 @@ ctrlc = "3"
 # GUI dependencies (feature-gated)
 axum = { version = "0.7", features = ["ws"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
+tower = { version = "0.4", optional = true }
 tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
 futures = { version = "0.3", optional = true }
 notify = { version = "6", optional = true }
 tracing = { version = "0.1", optional = true }
 
 [features]
-gui = ["axum", "tokio", "tower-http", "futures", "notify", "tracing"]
+gui = ["axum", "tokio", "tower", "tower-http", "futures", "notify", "tracing"]
 wasm = [
   "wasm-bindgen",
   "js-sys",
