feat: add marked and highlight.js dependencies
- Install marked ^12.0.0 for markdown parsing
- Install highlight.js ^11.9.0 for syntax highlighting
- Update bundle-web.sh to use --bundle flag for npm dependencies
- Enables future replacement of custom markdown parser

Closes bn-ae19

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Development dependencies for binnacle project",
   "devDependencies": {
     "esbuild": "^0.24.2",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^12.0.2"
   },
   "scripts": {
     "lint:js": "eslint web/js/**/*.js",
