Add Lightpanda GUI validation to CI workflow
- Add gui-check job to CI that validates GUI on web/ or src/commands/gui/ changes
- Install Lightpanda headless browser in CI
- Run 'just gui-check' to detect JavaScript console errors/warnings
- Update AGENTS.md with GUI validation guidance
- Emphasize running gui-check before committing GUI changes

Relates to bn-a5cc

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,3 +110,58 @@ jobs:
 
       - name: Run zizmor
         uses: zizmorcore/zizmor-action@135698455da5c3b3e55f73f4419e481ab68cdd95 # v0.4.1
+
+  gui-check:
+    name: GUI Check
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+    # Skip for PRs from forks (security: defense in depth)
+    if: github.event_name == 'push' || (github.event.pull_request.head.repo != null && github.event.pull_request.head.repo.full_name == github.repository)
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          persist-credentials: false
+
+      - name: Check for GUI changes
+        id: changes
+        run: |
+          if git diff --name-only ${{ github.event.before || 'HEAD~1' }} HEAD | grep -qE '^(web/|src/commands/gui/)'; then
+            echo "gui_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "gui_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Install Rust toolchain
+        if: steps.changes.outputs.gui_changed == 'true'
+        uses: dtolnay/rust-toolchain@56f84321dbccf38fb67ce29ab63e4754056677e0 # stable
+        with:
+          toolchain: stable
+
+      - name: Enable cargo cache
+        if: steps.changes.outputs.gui_changed == 'true'
+        uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
+
+      - name: Install Just
+        if: steps.changes.outputs.gui_changed == 'true'
+        uses: extractions/setup-just@dd310ad5a97d8e7b41793f8ef055398d51ad4de6 # v2.0.0
+
+      - name: Install Lightpanda
+        if: steps.changes.outputs.gui_changed == 'true'
+        run: |
+          curl -L -o /tmp/lightpanda \
+            https://github.com/lightpanda-io/browser/releases/download/v0.2.0/lightpanda-x86_64-linux
+          sudo mv /tmp/lightpanda /usr/local/bin/lightpanda
+          sudo chmod +x /usr/local/bin/lightpanda
+
+      - name: Run GUI check
+        if: steps.changes.outputs.gui_changed == 'true'
+        run: just gui-check
+        env:
+          LIGHTPANDA_DISABLE_TELEMETRY: true
+
+      - name: Skip (no GUI changes)
+        if: steps.changes.outputs.gui_changed == 'false'
+        run: echo "No GUI changes detected, skipping validation"
