--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,9 +70,11 @@ tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
 futures = { version = "0.3", optional = true }
 notify = { version = "6", optional = true }
 tracing = { version = "0.1", optional = true }
+regex = { version = "1", optional = true }
+libc = { version = "0.2", optional = true }
 
 [features]
-gui = ["axum", "tokio", "tower", "tower-http", "futures", "notify", "tracing"]
+gui = ["axum", "tokio", "tower", "tower-http", "futures", "notify", "tracing", "regex", "libc"]
 wasm = [
   "wasm-bindgen",
   "js-sys",
