chore: add test artifacts to gitignore
- Add playwright-report/ and test-results/ to ignore Playwright test outputs
- Add web/test-*.html pattern for development test files
- Add web/tests/ for test infrastructure files

These are development/test artifacts that should not be tracked.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ pkg/
 # Node.js dependencies
 node_modules/
 package-lock.json
+
+# Playwright test artifacts
+playwright-report/
+test-results/
+
+# Test/development files
+web/test-*.html
+web/tests/
