--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Enable cargo cache
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
 
+      - name: Install npm dependencies
+        run: npm ci
+
       - name: Run tests
         run: cargo test --all-features
 
@@ -68,6 +71,9 @@ jobs:
 
       - name: Enable cargo cache
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
+
+      - name: Install npm dependencies
+        run: npm ci
 
       - name: Run clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
