fix(ci): add npm ci to CD workflow and GUI check job
The build.rs bundles web assets using npm dependencies. Add npm ci
to all jobs that run cargo commands:
- CD build job (builds release binary)
- CD publish job (runs clippy/tests before publish)
- CI gui-check job (runs just gui-check)

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -82,6 +82,9 @@ jobs:
       - name: Enable cargo cache
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
 
+      - name: Install npm dependencies
+        run: npm ci
+
       - name: Build and upload binary
         uses: taiki-e/upload-rust-binary-action@e7953b6078194a4ae5f5619632e3715db6275561 # v1.24.0
         id: upload-release
@@ -130,6 +133,9 @@ jobs:
 
       - name: Enable cargo cache
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
+
+      - name: Install npm dependencies
+        run: npm ci
 
       # Preflight validation - same checks as CI
       - name: Check formatting
