--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -150,6 +150,10 @@ jobs:
         if: steps.changes.outputs.gui_changed == 'true'
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6 # v2.7.8
 
+      - name: Install npm dependencies
+        if: steps.changes.outputs.gui_changed == 'true'
+        run: npm ci
+
       - name: Install Just
         if: steps.changes.outputs.gui_changed == 'true'
         uses: extractions/setup-just@dd310ad5a97d8e7b41793f8ef055398d51ad4de6 # v2.0.0
