--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binnacle"
-version = "0.0.1-alpha.5"
+version = "0.0.1-alpha.6"
 edition = "2024"
 description = "A CLI tool for AI agents and humans to track project graphs"
 license = "MIT"
@@ -74,7 +74,17 @@ regex = { version = "1", optional = true }
 libc = { version = "0.2", optional = true }
 
 [features]
-gui = ["axum", "tokio", "tower", "tower-http", "futures", "notify", "tracing", "regex", "libc"]
+gui = [
+  "axum",
+  "tokio",
+  "tower",
+  "tower-http",
+  "futures",
+  "notify",
+  "tracing",
+  "regex",
+  "libc",
+]
 wasm = [
   "wasm-bindgen",
   "js-sys",
