--- a/container/Containerfile
+++ b/container/Containerfile
@@ -60,18 +60,21 @@ RUN mkdir -p /etc/nss_wrapper && \
 
 # Copy binnacle binary (bn container build copies the running binary here)
 # For manual builds: cargo build --release && cp target/release/bn container/bn
+# The binary has COPILOT_VERSION embedded at build time (see build.rs)
 ARG BN_BINARY_PATH=container/bn
 COPY ${BN_BINARY_PATH} /usr/local/bin/bn
+
+# Install pinned GitHub Copilot CLI version using bn system copilot install
+# This downloads the version embedded in the bn binary (from COPILOT_VERSION at build time)
+# The binary is cached to ~/.local/share/binnacle/utils/copilot/<version>/copilot
+ENV BN_DATA_DIR=/usr/local/share/binnacle
+RUN bn system copilot install --upstream
 
 # Install git wrapper that blocks --no-verify
 # The wrapper intercepts git commit/push --no-verify and rejects it
 # This ensures agents cannot bypass commit hooks
 COPY container/git-wrapper.sh /usr/local/bin/git
 RUN chmod +x /usr/local/bin/git
-
-# Install GitHub Copilot CLI globally using npm
-# Note: Requires COPILOT_GITHUB_TOKEN at runtime for auth
-RUN npm install -g @github/copilot || true
 
 # Create working directories
 RUN mkdir -p /workspace /binnacle
