feat(container): add LSP support for Rust and TypeScript
- Add rust-analyzer component to rustup installation
- Install @vtsls/language-server via npm
- Write LSP config to ~/.copilot/lsp-config.json in entrypoint
- Enables code intelligence (go-to-definition, find-references, hover)
  for Rust and TypeScript/JavaScript in container

Addresses: bn-8060

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/container/Containerfile
+++ b/container/Containerfile
@@ -38,9 +38,13 @@ ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
     PATH=/usr/local/cargo/bin:$PATH
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal && \
-    rustup component add rustfmt clippy && \
+    rustup component add rustfmt clippy rust-analyzer && \
     cargo install cargo-audit && \
     chmod -R a+rw $RUSTUP_HOME $CARGO_HOME
+
+# Install TypeScript/JavaScript language server for LSP support
+# Requires Node.js >= 16 (Fedora 43 provides 22.x)
+RUN npm install -g @vtsls/language-server
 
 # Install Lightpanda headless browser for GUI validation
 RUN curl -L -o /usr/local/bin/lightpanda \
