--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "binnacle"
 version = "0.0.1-alpha.8"
 edition = "2024"
+rust-version = "1.85"
 description = "A CLI tool for AI agents and humans to track project graphs"
 license = "MIT"
 repository = "https://github.com/hbeberman/binnacle"
