--- a/container/Containerfile
+++ b/container/Containerfile
@@ -38,9 +38,14 @@ ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
     PATH=/usr/local/cargo/bin:$PATH
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable --profile minimal && \
-    rustup component add rustfmt clippy rust-analyzer && \
+    rustup component add rustfmt clippy && \
     cargo install cargo-audit && \
     chmod -R a+rw $RUSTUP_HOME $CARGO_HOME
+
+# Install rust-analyzer from prebuilt binary (faster than rustup component)
+RUN mkdir -p ~/.local/bin && \
+    curl -L https://github.com/rust-lang/rust-analyzer/releases/latest/download/rust-analyzer-x86_64-unknown-linux-gnu.gz | gunzip -c > /usr/local/bin/rust-analyzer && \
+    chmod +x /usr/local/bin/rust-analyzer
 
 # Install TypeScript/JavaScript language server for LSP support
 # Requires Node.js >= 16 (Fedora 43 provides 22.x)
