feat(tui): Add TUI Phase 1 foundation
Add feature-gated Terminal UI for real-time cluster monitoring.

Phase 1 deliverables:
- Add 'tui' feature with ratatui/crossterm/tokio-tungstenite dependencies
- Basic app skeleton with terminal setup/restore
- WebSocket connection to bn serve instance
- Exit with helpful error if no server is running
- Add 'bn tui' CLI command with --port and --host options

The TUI connects to a running bn serve or bn gui serve instance via
WebSocket and displays a basic interface. Future phases will add:
- Queue/Ready view (Phase 2)
- Recently Completed view (Phase 3)
- Node Detail view (Phase 4)
- Notifications (Phase 5)
- Connection Resilience (Phase 6)

Implements task bn-3653 (TUI Phase 1: Foundation)
Part of milestone bn-2f00 (Terminal UI)

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,11 @@ tracing = { version = "0.1", optional = true }
 regex = { version = "1", optional = true }
 libc = { version = "0.2", optional = true }
 
+# TUI dependencies (feature-gated)
+ratatui = { version = "0.29", optional = true }
+crossterm = { version = "0.28", optional = true }
+tokio-tungstenite = { version = "0.24", optional = true }
+
 [features]
 gui = [
   "axum",
@@ -86,6 +91,13 @@ gui = [
   "tracing",
   "regex",
   "libc",
+]
+tui = [
+  "ratatui",
+  "crossterm",
+  "tokio",
+  "tokio-tungstenite",
+  "futures",
 ]
 tmux = []
 wasm = [
