--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,7 @@ libc = { version = "0.2", optional = true }
 ratatui = { version = "0.29", optional = true }
 crossterm = { version = "0.28", optional = true }
 tokio-tungstenite = { version = "0.24", optional = true }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
 
 [features]
 gui = [
@@ -98,6 +99,7 @@ tui = [
   "tokio",
   "tokio-tungstenite",
   "futures",
+  "reqwest",
 ]
 tmux = []
 wasm = [
