feat(github): add GitHub user endpoint validation for --token-pipelines
Implement lightweight PAT validation via GET /user endpoint:
- Add ureq dependency with json feature for blocking HTTP requests
- Create github module with validate_github_user() function
- Return GitHubUser (login, id, name) on success
- Return specific errors for 401/403/other HTTP failures
- Include unit tests for JSON deserialization and invalid tokens

This enables the --token-pipelines flag to validate tokens without
burning AI tokens (Copilot API calls).

Closes: bn-3c73

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,9 @@ base64 = "0.22"
 # Signal handling for graceful shutdown
 ctrlc = "3"
 
+# HTTP client for token validation (blocking for CLI use)
+ureq = { version = "2", features = ["json"] }
+
 # GUI dependencies (feature-gated)
 axum = { version = "0.7", features = ["ws"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
