fix: add localhost/ prefix to FROM in worker Containerfile
Without the localhost/ prefix, buildah prompts for remote registries
instead of using the locally-built binnacle-default image.

Fixes bn-2c0d

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/.binnacle/containers/worker/Containerfile
+++ b/.binnacle/containers/worker/Containerfile
@@ -1,6 +1,6 @@
 # Binnacle Container Worker
 # Derived from binnacle-default which provides: bn, copilot, git-wrapper, nss_wrapper setup
-FROM binnacle-default:latest
+FROM localhost/binnacle-default:latest
 
 LABEL org.opencontainers.image.title="binnacle-worker"
 LABEL org.opencontainers.image.description="AI agent worker with binnacle task tracking"
