--- a/container/Containerfile
+++ b/container/Containerfile
@@ -2,7 +2,7 @@
 # Derived from binnacle-default which provides: bn, copilot, git-wrapper, nss_wrapper setup
 FROM binnacle-default:latest
 
-LABEL org.opencontainers.image.title="binnacle-worker"
+LABEL org.opencontainers.image.title="binnacle-self"
 LABEL org.opencontainers.image.description="AI agent worker with binnacle task tracking"
 LABEL org.opencontainers.image.source="https://github.com/hbeberman/binnacle"
 
