--- a/.binnacle/containers/worker/Containerfile
+++ b/.binnacle/containers/worker/Containerfile
@@ -1,6 +1,6 @@
 # Binnacle Container Worker
 # Derived from binnacle-default which provides: bn, copilot, git-wrapper, nss_wrapper setup
-FROM localhost/binnacle-default:latest
+FROM binnacle-default:latest
 
 LABEL org.opencontainers.image.title="binnacle-self"
 LABEL org.opencontainers.image.description="AI agent worker with binnacle task tracking"
