docs: rewrite README with consolidated onboarding section
- Replace Quick Start with unified Onboarding section covering prerequisites,
  install, initialization, basic workflow, and worker agent setup
- Add prerequisites block: Rust, system deps (Fedora/Ubuntu), npm deps, WASM
- Document PAT creation with Copilot Requests permission
- Add COPILOT_GITHUB_TOKEN export instructions
- Pin install commands to v0.0.1-alpha.9
- Document bn container build default/worker steps
- Remove redundant Build Prerequisites, Install, and System Dependencies sections
- bn-agent: print container image name before launch (localhost/bn-{hash}-worker)
- bn-agent: fall back to default image with warning if worker not found

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "binnacle"
-version = "0.0.1-alpha.8"
+version = "0.0.1-alpha.9"
 edition = "2024"
 rust-version = "1.85"
 description = "A CLI tool for AI agents and humans to track project graphs"
@@ -82,7 +82,10 @@ libc = { version = "0.2", optional = true }
 ratatui = { version = "0.29", optional = true }
 crossterm = { version = "0.28", optional = true }
 tokio-tungstenite = { version = "0.24", optional = true }
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
+reqwest = { version = "0.12", default-features = false, features = [
+  "json",
+  "rustls-tls",
+], optional = true }
 
 [features]
 gui = [
