feat(tui): add tracing-appender and tracing-subscriber dependencies
Add tracing-appender 0.2 and tracing-subscriber 0.3 (with json and env-filter
features) to Cargo.toml under the tui feature for TUI diagnostic logging.

Part of TUI Diagnostic Logging milestone (bn-406e).

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,8 @@ reqwest = { version = "0.12", default-features = false, features = [
   "json",
   "rustls-tls",
 ], optional = true }
+tracing-appender = { version = "0.2", optional = true }
+tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
 
 [features]
 gui = [
@@ -107,6 +109,9 @@ tui = [
   "tokio-tungstenite",
   "futures",
   "reqwest",
+  "tracing",
+  "tracing-appender",
+  "tracing-subscriber",
 ]
 tmux = []
 wasm = [
